# misis2023f-22-01-kozin-v-v

./: CMakeLists.txt  README.md  codeforces.id  status.md
docs/: report.md
prj.codeforces/: 1093c.cpp  1213b.cpp  1324d.cpp  1365b.cpp  1462a.cpp  1475b.cpp  1541b.cpp  1632b.cpp  1671a.cpp  1712c.cpp  1713c.cpp  1738b.cpp  1742b.cpp  1850c.cpp  1857b.cpp  1867a.cpp  1878a.cpp  1883с.cpp  1909b.cpp  1914d.cpp  1919a.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  main.cpp
prj.cw/evaluationWarpModel/: CMakeLists.txt  image.cpp  image.h  imageEval.cpp  main.cpp  points1.txt  points2.txt
prj.cw/imageWarping/: CMakeLists.txt  asterisms.cpp  asterisms.h  image.cpp  image.h  imageEval.h  main.cpp
