add_executable(1475b 1475b.cpp)
add_executable(1738b 1738b.cpp)
add_executable(1850c 1850c.cpp)
add_executable(1867a 1867a.cpp)
add_executable(1883c 1883с.cpp)
add_executable(1324d 1324d.cpp)
add_executable(1671a 1671a.cpp)
add_executable(1919a 1919a.cpp)
add_executable(1857b 1857b.cpp)
add_executable(1713c 1713c.cpp)
add_executable(1213b 1213b.cpp)
add_executable(1365b 1365b.cpp)
add_executable(1632b 1632b.cpp)
add_executable(1742b 1742b.cpp)
add_executable(1093c 1093c.cpp)
add_executable(1909b 1909b.cpp)
add_executable(1914d 1914d.cpp)
add_executable(1878a 1878a.cpp)
add_executable(1541b 1541b.cpp)
add_executable(1712c 1712c.cpp)
add_executable(1462a 1462a.cpp)
#add_executable(test1 test.cpp)
